<resources>
<!--    <string name="app_name">TheMedalists</string>-->
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="app_name">Medalists</string>
    <string name="main_title">Medalist List</string>
    <string name="country">Country</string>
    <string name="modal_golds">Gold: 0</string>
    <string name="modal_silvers">Silver: 0</string>
    <string name="modal_bronzes">Bronze: 0</string>
    <string name="modal_country_code">CODE</string>
</resources>