<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="start">

        <TextView
            android:id="@+id/modalCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/modalGolds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modal_golds"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/modalSilvers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modal_silvers"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/modalBronzes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modal_bronzes"
            android:textSize="18sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/modalCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/modal_country_code"
        android:textSize="25sp"
        android:textStyle="bold" />
</LinearLayout>
